# BinaryStreamLegacy

./: .gitignore  README.md  pyproject.toml
BinaryStream/: BinaryStream.py
