[tool.poetry]
name = "BinaryStream"
version = "0.1.0"
description = "BinaryStream libary for python (support only big-endian stream)"
authors = ["TheMade4"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "BinaryStream"}
]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
